--- a/make_llm_endpoint.ipynb
+++ b/make_llm_endpoint.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "\"\"\"\n",
     "Be sure to set these environment variables:\n",
-    "os.environ['AWS_PROFILE'] = your-sagemaker-aws-profile in ./aws/config\n",
+    "os.environ['AWS_PROFILE'] = your-sagemaker-aws-profile in /aws/config\n",
     "os.environ['HF_TOKEN'] = your-hugging-face-access-token\n",
     "\"\"\"\n",
     "role = sagemaker.get_execution_role()\n",
@@ -382,52 +382,6 @@
     "    }\n",
     ")\n",
     "pprint(response[0]['generated_text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import sagemaker\n",
-    "import boto3\n",
-    "from sagemaker.huggingface import HuggingFaceModel, get_huggingface_llm_image_uri\n",
-    "\n",
-    "try:\n",
-    "\trole = sagemaker.get_execution_role()\n",
-    "except ValueError:\n",
-    "\tiam = boto3.client('iam')\n",
-    "\trole = iam.get_role(RoleName='sagemaker_execution_role')['Role']['Arn']\n",
-    "\n",
-    "# Hub Model configuration. https://huggingface.co/models\n",
-    "hub = {\n",
-    "\t'HF_MODEL_ID':'meta-llama/Llama-3.2-1B',\n",
-    "\t'SM_NUM_GPUS': json.dumps(1),\n",
-    "\t'HUGGING_FACE_HUB_TOKEN': '<REPLACE WITH YOUR TOKEN>'\n",
-    "}\n",
-    "\n",
-    "assert hub['HUGGING_FACE_HUB_TOKEN'] != '<REPLACE WITH YOUR TOKEN>', \"You have to provide a token.\"\n",
-    "\n",
-    "# create Hugging Face Model Class\n",
-    "huggingface_model = HuggingFaceModel(\n",
-    "\timage_uri=get_huggingface_llm_image_uri(\"huggingface\",version=\"2.3.1\"),\n",
-    "\tenv=hub,\n",
-    "\trole=role, \n",
-    ")\n",
-    "\n",
-    "# deploy model to SageMaker Inference\n",
-    "predictor = huggingface_model.deploy(\n",
-    "\tinitial_instance_count=1,\n",
-    "\tinstance_type=\"ml.g5.2xlarge\",\n",
-    "\tcontainer_startup_health_check_timeout=300,\n",
-    "  )\n",
-    "  \n",
-    "# send request\n",
-    "predictor.predict({\n",
-    "\t\"inputs\": \"My name is Julien and I like to\",\n",
-    "})"
    ]
   }
  ],
