--- a/make_llm_endpoint.ipynb
+++ b/make_llm_endpoint.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,21 +42,23 @@
     "os.environ['AWS_PROFILE'] = your-sagemaker-aws-profile in /aws/config\n",
     "os.environ['HF_TOKEN'] = your-hugging-face-access-token\n",
     "\"\"\"\n",
+    "\n",
+    "MODEL_NAME = 'meta-llama/Llama-3.2-1B-Instruct'\n",
+    "\n",
     "role = sagemaker.get_execution_role()\n",
     "\n",
     "hub = {\n",
-    "\t'HF_MODEL_ID': 'meta-llama/Llama-3.2-1B-Instruct',\n",
+    "\t'HF_MODEL_ID': MODEL_NAME,\n",
     "\t'SM_NUM_GPUS': json.dumps(1),\n",
     "\t'HUGGING_FACE_HUB_TOKEN': os.getenv('HF_TOKEN')\n",
     "\t}\n",
     "\n",
-    "print(f\"Role: {role}\")\n",
-    "\n"
+    "print(f\"Role: {role}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -79,13 +81,13 @@
    "source": [
     "# Delete previous endpoint\n",
     "sagemaker_client = boto3.client(\"sagemaker\", region_name='us-east-1')\n",
-    "sagemaker_client.delete_endpoint(EndpointName=\"llama-1b-endpoint\")\n",
-    "sagemaker_client.delete_endpoint_config(EndpointConfigName=\"llama-1b-endpoint\")"
+    "sagemaker_client.delete_endpoint(EndpointName=\"rag-lite-endpoint\")\n",
+    "sagemaker_client.delete_endpoint_config(EndpointConfigName=\"rag-lite-endpoint\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +183,7 @@
     "    initial_instance_count=1,\n",
     "    instance_type=\"ml.g5.xlarge\",\n",
     "    serverless_config=serverless_config,\n",
-    "\tendpoint_name=\"llama-1b-endpoint\"\n",
+    "\tendpoint_name=\"rag-lite-endpoint\"\n",
     ")\n"
    ]
   },
